fix overflow

--- a/src/app/twiglets/about-twiglet-modal/about-twiglet-modal.component.scss
+++ b/src/app/twiglets/about-twiglet-modal/about-twiglet-modal.component.scss
@@ -1,3 +1,8 @@
+.modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+}
+
 .fa-pencil, .btn-link {
     cursor: pointer;
 }
